--- a/index.html
+++ b/index.html
@@ -75,8 +75,6 @@
 <script src="http://maps.google.com/maps?file=api&amp;v=2&amp;key=ABQIAAAAue-p4aGvO8316p45wNBlhBRlrZjuTPwvKSUZIF0_dsu12LmfuBQXsvcXvfazwWVzCQlwG4CP2O6mBQ" type="text/javascript"></script>
 <!--<script src="http://maps.google.com/maps?file=api&amp;v=2&amp;key=ABQIAAAAue-p4aGvO8316p45wNBlhBRIrSlBPavw7Ifq7KLBpU4q9tB4eBSDxh9Cn5W60dBeurP_D8-QpTvthg" type="text/javascript"></script>-->
 <script type="text/javascript">
-//$.webshims.setOptions('datepicker', { dateFormat: 'dd.mm.yy'});
-//$.webshims.debug=true;
 $.webshims.polyfill('lightweight');
     (function(defLanguage) {
         var layoutTypes={INIT:0,SEARCH:1,PROFILE:2,HOTELCARD:3};
@@ -89,7 +87,7 @@ $.webshims.polyfill('lightweight');
                 return false;
             }
             $("#error_city").hide();
-            window._configuration.initSearchCriteria();
+
             var formToProcess=$("#searchform").ajaxForm();
                 var criteria=window._configuration.get("searchCriteria");
 
@@ -540,6 +538,7 @@ $.webshims.polyfill('lightweight');
             $.when(initMainTemplate.call(self)).then(function(){
                  $("#mtemplate").empty();
                 new iApp(self);
+                _configuration.initSearchCriteria();
                 Backbone.history.start();
             });
         };
@@ -849,11 +848,11 @@ $.webshims.polyfill('lightweight');
         var PagedHotelsView=Backbone.View.extend({
          el:$('#hotellist_holder'),
          render:function(){
-             debugger;
+             //debugger;
              var self=this;
              getTemplate("hotellist_item_tmpl");
              self.el=$('#hotellist_holder').empty();
-             debugger;
+             //debugger;
              var jsonModel=self.model.toJSON()[0];
              var hotelCount=jsonModel['hotelCount'];
              var offerCount=jsonModel['offersCount'];
@@ -1028,7 +1027,7 @@ $.webshims.polyfill('lightweight');
                                             endDate=offer.dateTo;
                                         }
                                     }
-                                    debugger;
+                                    //debugger;
                                     price+=parseFloat(offer.price);
                                 });
                                 var offer=_.extend({},{startDate:startDate},{endDate:endDate},{offerPrice:price});
@@ -1297,10 +1296,12 @@ $.webshims.polyfill('lightweight');
                 performSearchRequest.call(this,_hotelsList);
             },
             search:function(srcType){
+                //debugger;
                 _configuration.set({searchType:srcType});
             },
             makeSearch:function(srcType){
                 var self=this;
+                //debugger;
                 if(setSearchParameters(srcType)){
                     initSearchActivity.call(self);
                 }
@@ -1334,7 +1335,7 @@ $.webshims.polyfill('lightweight');
                 }
             },
             sortBy:function(type){
-                debugger;
+                //debugger;
                 //span id=sbt_type class=asc|desc|none
             }
         });
