--- a/Locales/ru/main.html
+++ b/Locales/ru/main.html
@@ -145,9 +145,9 @@
 
     <div class="label">
         <span class="label">1</span>
-        <span class="host"><input type="text" id="city" name="city" class="dest" value="Город" defValue="Город" suggest="yes" suggest_value='[{city:"Kiev", cityId:0, country:"Ukraine", countryId:1}]' nosubmit/>
+        <span class="host"><input type="text" id="city" name="city" required="required" class="dest form-ui-invalid" value="Город" defValue="Город" suggest="yes" suggest_value='[{city:"Kiev", cityId:0, country:"Ukraine", countryId:1}]' nosubmit/>
         <span class="diags" id="error_city">
-            Hey! You've just entered some weird information here. Check it carefully please!</span>
+            <!--Hey! You've just entered some weird information here. Check it carefully please!</span>-->
         <span class="diags">Извините, у нас нет предложений для этого города</span>
         </span>
     </div>
